moved most work to final tech notebook HAB, cleaning up some code

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -8,26 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![algal bloom](download.jpeg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The problem \n",
-    "\n",
-    "Phytoplankton are single-celled algae that live in freshwater, saltwater, and everywhere in between. Algal blooms, big explosions of phytoplankton growth, happen naturally every late spring and early fall all around the globe. Sometimes, blooms grow out of control for a variety of reasons: excess of nutrient from land based runoff, influx of freshwater, higher than normal temperatures. These are called Harmful Algal Blooms (HABs). HABs pose a threat to human health and ecosystem health. \n",
-    "\n",
-    "![hab facts](download1.jpeg)\n",
-    "\n",
-    "Early detection of algal blooms from imagery can help scientists and policy makers sample blooms as soon as possible to determine if they are toxic, and make important decisions regarding public health: beach closures, fisherman warnings, and seafood warnings can all help humans avoid harmful effects of HABS. My goal is to create a model that classifies algal blooms using imagery obtained from Google. Algal blooms come in all differnet shapes, sizes and colors, and this highly varied dataset will hopefully lead to a model that is able to classsify algal blooms in all forms. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -137,16 +117,16 @@
     "# get all the data in the directory split/test (230 images), and reshape them\n",
     "test_generator = ImageDataGenerator(rescale=1./255, rotation_range=90, \n",
     "                                    brightness_range=[0.1,1.5], horizontal_flip=True).flow_from_directory(\n",
-    "    'split/test/', target_size=(140, 140),batch_size = 291)\n",
+    "    'split/test/', target_size=(140, 140),batch_size = 291, class_mode='binary')\n",
     "# get all the data in the directory split/train (570 images), and reshape them\n",
     "train_generator = ImageDataGenerator(rescale=1./255,rotation_range=90, \n",
     "                                     brightness_range=[0.2,1.5], horizontal_flip=True).flow_from_directory(\n",
-    "    'split/train/', target_size=(140, 140), batch_size=871)\n",
+    "    'split/train/', target_size=(140, 140), batch_size=871, class_mode='binary')\n",
     "\n",
     "# get all the data in the directory split/validation (160 images), and reshape them\n",
     "val_generator = ImageDataGenerator(rescale=1./255,  rotation_range=90, \n",
     "                                   brightness_range=[0.2,1.5], horizontal_flip=True).flow_from_directory(\n",
-    "    'split/validation/', target_size=(140, 140), batch_size = 294)"
+    "    'split/validation/', target_size=(140, 140), batch_size = 294, class_mode='binary')"
    ]
   },
   {
@@ -514,7 +494,6 @@
    "source": [
     "# check labels for classes \n",
     "# can a human label them easily?\n",
-    "# bayesian level \n",
     "# waht are the standards and accuracy for satellite traininng of models?\n",
     "# for whom? \n",
     "# find image standard and demo with that image "
