--- a/HAB_Classification.ipynb
+++ b/HAB_Classification.ipynb
@@ -1,17 +1,42 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computer Detection of Algal Blooms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![algal bloom](download.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The problem \n",
+    "\n",
+    "Phytoplankton are single-celled algae that live in freshwater, saltwater, and everywhere in between. Algal blooms, big explosions of phytoplankton growth, happen naturally every late spring and early fall all around the globe. Sometimes, blooms grow out of control for a variety of reasons: excess of nutrient from land based runoff, influx of freshwater, higher than normal temperatures. These are called Harmful Algal Blooms (HABs). HABs pose a threat to human health and ecosystem health. \n",
+    "\n",
+    "![hab facts](download1.jpeg)\n",
+    "\n",
+    "Early detection of algal blooms from imagery can help scientists and policy makers sample blooms as soon as possible to determine if they are toxic, and make important decisions regarding public health: beach closures, fisherman warnings, and seafood warnings can all help humans avoid harmful effects of HABS. My goal is to create a model that classifies algal blooms using imagery obtained from Google. Algal blooms come in all differnet shapes, sizes and colors, and this highly varied dataset will hopefully lead to a model that is able to classsify algal blooms in all forms. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found 228 images belonging to 2 classes.\n",
-      "Found 570 images belonging to 2 classes.\n",
-      "Found 160 images belonging to 2 classes.\n"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -30,7 +55,267 @@
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
     "from data_cleaning import *\n",
     "from keras import models\n",
-    "from keras import layers"
+    "from keras import layers\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images appended!\n",
+      "(140, 100)\n",
+      "images appended!\n",
+      "(160, 237)\n",
+      "images appended!\n",
+      "(140, 100)\n",
+      "images appended!\n",
+      "(153, 110)\n",
+      "images appended!\n",
+      "(140, 100)\n",
+      "images appended!\n",
+      "(200, 160)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get_img_stats is a function loaded in from data_cleaning.py\n",
+    "# it loops through each directory and gets the dimensions of each image and prints the minimum\n",
+    "test_algae = \"split/test/algae/*\"\n",
+    "test_not_algae = \"split/test/not_algae/*\"\n",
+    "get_img_stats(test_algae)\n",
+    "get_img_stats(test_not_algae)\n",
+    "\n",
+    "train_algae = \"split/train/algae/*\"\n",
+    "train_not_algae = \"split/train/not_algae/*\"\n",
+    "get_img_stats(train_algae)\n",
+    "get_img_stats(train_not_algae)\n",
+    "\n",
+    "val_algae = \"split/validation/algae/*\"\n",
+    "val_not_algae = \"split/validation/not_algae/*\"\n",
+    "get_img_stats(val_algae)\n",
+    "get_img_stats(val_not_algae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 867 images belonging to 2 classes.\n",
+      "Found 288 images belonging to 2 classes.\n",
+      "Found 291 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rescale and reshape the images\n",
+    "\n",
+    "train_gen = ImageDataGenerator(rescale=1./255).flow_from_directory(\n",
+    "    'split/train/', target_size=(140,140), batch_size=871, class_mode='binary')\n",
+    "\n",
+    "test_gen = ImageDataGenerator(rescale=1./255).flow_from_directory(\n",
+    "    'split/test/', target_size=(140,140), batch_size=291, class_mode='binary')\n",
+    "\n",
+    "val_gen = ImageDataGenerator(rescale=1./255).flow_from_directory(\n",
+    "    'split/validation/', target_size=(140,140), batch_size=294, class_mode='binary')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the images and labels\n",
+    "train_images, train_labels = next(train_gen)\n",
+    "test_images, test_labels = next(test_gen)\n",
+    "val_images, val_labels = next(val_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples: 867\n",
+      "Number of testing samples: 288\n",
+      "Number of validation samples: 291\n",
+      "train_images shape: (867, 140, 140, 3)\n",
+      "train_labels shape: (867,)\n",
+      "test_images shape: (288, 140, 140, 3)\n",
+      "test_labels shape: (288,)\n",
+      "val_images shape: (291, 140, 140, 3)\n",
+      "val_labels shape: (291,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check the dataset specs\n",
+    "m_train = train_images.shape[0]\n",
+    "m_test = test_images.shape[0]\n",
+    "m_val = val_images.shape[0]\n",
+    "num_pics = train_images.shape[1]\n",
+    "\n",
+    "print (\"Number of training samples: \" + str(m_train))\n",
+    "print (\"Number of testing samples: \" + str(m_test))\n",
+    "print (\"Number of validation samples: \" + str(m_val))\n",
+    "print (\"train_images shape: \" + str(train_images.shape))\n",
+    "print (\"train_labels shape: \" + str(train_labels.shape))\n",
+    "print (\"test_images shape: \" + str(test_images.shape))\n",
+    "print (\"test_labels shape: \" + str(test_labels.shape))\n",
+    "print (\"val_images shape: \" + str(val_images.shape))\n",
+    "print (\"val_labels shape: \" + str(val_labels.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 0., 0., 1., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-c208545bc75a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# concatenate the labels and images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_labels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# check the shape of some of the images to make sure everything went as planned\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
+   "source": [
+    "# concatenate the labels and images\n",
+    "images = np.concatenate((train_images, test_images, val_images))\n",
+    "labels = np.concatenate((train_labels[:,0], test_labels[:,0], val_labels[:,0]))\n",
+    "\n",
+    "# check the shape of some of the images to make sure everything went as planned\n",
+    "train_images.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check size stas post-reshaping\n",
+    "# show image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# design the base model (NO AUGMENTATION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate base model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# augmentation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build new model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate augmented model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# results, conclusions"
    ]
   }
  ],
