--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -117,16 +117,16 @@
     "# get all the data in the directory split/test (230 images), and reshape them\n",
     "test_generator = ImageDataGenerator(rescale=1./255, rotation_range=90, \n",
     "                                    brightness_range=[0.1,1.5], horizontal_flip=True).flow_from_directory(\n",
-    "    'split/test/', target_size=(140, 140),batch_size = 291, class_mode='binary')\n",
+    "    'split/test/', target_size=(140, 140),batch_size = 291)# class_mode='binary')\n",
     "# get all the data in the directory split/train (570 images), and reshape them\n",
     "train_generator = ImageDataGenerator(rescale=1./255,rotation_range=90, \n",
     "                                     brightness_range=[0.2,1.5], horizontal_flip=True).flow_from_directory(\n",
-    "    'split/train/', target_size=(140, 140), batch_size=871, class_mode='binary')\n",
+    "    'split/train/', target_size=(140, 140), batch_size=871) #class_mode='binary')\n",
     "\n",
     "# get all the data in the directory split/validation (160 images), and reshape them\n",
     "val_generator = ImageDataGenerator(rescale=1./255,  rotation_range=90, \n",
     "                                   brightness_range=[0.2,1.5], horizontal_flip=True).flow_from_directory(\n",
-    "    'split/validation/', target_size=(140, 140), batch_size = 294, class_mode='binary')"
+    "    'split/validation/', target_size=(140, 140), batch_size = 294) #class_mode='binary')"
    ]
   },
   {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,30 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(867, 140, 140, 3)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "images = np.concatenate((train_images, test_images, val_images))\n",
-    "labels = np.concatenate((train_labels[:,0], test_labels[:,0], val_labels[:,0]))\n",
-    "\n",
-    "train_images.shape"
+    "labels = np.concatenate((train_labels[:,0], test_labels[:,0], val_labels[:,0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -270,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -329,22 +316,23 @@
    "outputs": [],
    "source": [
     "# instantiate the model \n",
-    "model = models.Sequential()\n",
-    "model.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "base_model = models.Sequential()\n",
+    "\n",
+    "base_model.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
     "                        input_shape=(140, 140,  3)))\n",
-    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "base_model.add(layers.MaxPooling2D((2, 2)))\n",
     "\n",
-    "model.add(layers.Conv2D(32, (4, 4), activation='relu'))\n",
-    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "base_model.add(layers.Conv2D(32, (4, 4), activation='relu'))\n",
+    "base_model.add(layers.MaxPooling2D((2, 2)))\n",
     "\n",
-    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
-    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "base_model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "base_model.add(layers.MaxPooling2D((2, 2)))\n",
     "\n",
-    "model.add(layers.Flatten())\n",
-    "model.add(layers.Dense(64, activation='relu'))\n",
-    "model.add(layers.Dense(1, activation='sigmoid'))\n",
+    "base_model.add(layers.Flatten())\n",
+    "base_model.add(layers.Dense(64, activation='relu'))\n",
+    "base_model.add(layers.Dense(1, activation='sigmoid'))\n",
     "\n",
-    "model.compile(loss='binary_crossentropy',\n",
+    "base_model.compile(loss='binary_crossentropy',\n",
     "              optimizer=\"sgd\",\n",
     "              metrics=['acc'])"
    ]
