final model added and evalauted

--- a/HAB_Classification.ipynb
+++ b/HAB_Classification.ipynb
@@ -728,6 +728,66 @@
    "source": [
     "# build new model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#augment the images\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255, \n",
+    "                                     rotation_range=90, \n",
+    "                                     brightness_range=[0.2,1.5], \n",
+    "                                     horizontal_flip=True) \n",
+    "                                                          \n",
+    "\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "        train_dir,\n",
+    "        target_size=(140, 140),\n",
+    "        batch_size=32)\n",
+    "\n",
+    "validation_generator = test_datagen.flow_from_directory(validation_dir, \n",
+    "                                                        target_size=(140, 140), \n",
+    "                                                        batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit_generator(train_generator, \n",
+    "                              steps_per_epoch=100, \n",
+    "                              epochs=30, \n",
+    "                              validation_data=validation_generator, \n",
+    "                              validation_steps=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final evaluation\n",
+    "test_generator = test_datagen.flow_from_directory(test_dir, \n",
+    "                                                  target_size=(140, 140), \n",
+    "                                                  batch_size=20)\n",
+    "\n",
+    "test_loss, test_acc = model.evaluate_generator(test_generator, steps=50)\n",
+    "print('test acc:', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
