move files to folders, clean up notebook

--- a/technical_notebook.ipynb
+++ b/technical_notebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![plankton](Plankton.jpg)"
+    "![plankton](images/Plankton.jpg)"
    ]
   },
   {
@@ -22,7 +22,7 @@
     "\n",
     "Phytoplankton are single-celled algae that live in freshwater, saltwater, and everywhere in between. Algal blooms, big explosions of phytoplankton growth, happen naturally every late spring and early fall all around the globe. Sometimes, blooms grow out of control for a variety of reasons: excess of nutrient from land based runoff, influx of freshwater, higher than normal temperatures. These are called Harmful Algal Blooms (HABs). HABs pose a threat to human health and ecosystem health. \n",
     "\n",
-    "![hab facts](download1.jpeg)\n",
+    "![hab facts](images/download1.jpeg)\n",
     "\n",
     "Early detection of algal blooms from imagery can help scientists and policy makers sample blooms as soon as possible to determine if they are toxic, and make important decisions regarding public health: beach closures, fisherman warnings, and seafood warnings can all help humans avoid harmful effects of HABS. My goal is to create a model that classifies algal blooms using imagery obtained from Google. Algal blooms come in all differnet shapes, sizes and colors, and this highly varied dataset will hopefully lead to a model that is able to classsify algal blooms in all forms. "
    ]
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![bloom](bloom.jpg)"
+    "![bloom](images/bloom.jpg)"
    ]
   },
   {
@@ -43,17 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -76,7 +70,7 @@
     "%matplotlib inline\n",
     "\n",
     "# custom function\n",
-    "from functions import *"
+    "from python_files.functions import *"
    ]
   },
   {
